--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jasmine-browser-runner": "^2.1.0",
+    "jasmine-core": "^5.0.1",
     "lite-server": "^2.6.1"
   },
   "dependencies": {
